# artifacts

./: .gitmodules  .python_version  README.md
.github/workflows/: llama-build-cpu.yaml  llama-build-cuda.yaml  llama-cpp-release.yaml
spacy/en_core_sci_md/: pyproject.toml
